# face_mood_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  face_mood_detection.cpp  install_raspberry.sh  install_ubuntu.sh  setup_opencv.sh
models/: emotion_ferplus.onnx
